--- a/templates/loan_management.html
+++ b/templates/loan_management.html
@@ -522,8 +522,9 @@
                     <label for="company_name" class="form-label">ชื่อบริษัทผู้ปล่อยกู้:</label>
                     <select class="form-input" id="company_name" name="company_name" required>
                         <option value="">-- เลือกบริษัท --</option>
-                        <option value="บริษัท A">บริษัท A</option>
-                        <option value="บริษัท B">บริษัท B</option>
+                        <option value="Starloan">Starloan</option>
+                        <option value="Glorycash">Glorycash</option>
+                        <option value="อื่นๆ">อื่นๆ</option>
                         {# เพิ่ม option สำหรับบริษัทอื่นๆ ที่นี่ได้เลย #}
                     </select>
                 </div>
